tests/baselines/reference/decoratorOnClassAccessor4.errors.txt
tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor4.ts(4,14): error TS1050: A 'set' accessor must have a corresponding 'get' accessor.


==== tests/cases/conformance/decorators/class/accessor/decoratorOnClassAccessor4.ts (1 errors) ====
    declare function dec<T>(target: any, propertyKey: string, descriptor: TypedPropertyDescriptor<T>): TypedPropertyDescriptor<T>;
    
    class C {
        @dec set accessor(value: number) { }
                 ~~~~~~~~
!!! error TS1050: A 'set' accessor must have a corresponding 'get' accessor.
    }